# daily-logger

./: .gitignore  README.md  main.py  pyproject.toml
