[tool.poetry]
name = "daily-logger"
version = "0.0.1"
description = "Script to use Ticktick tasks as daily logs"
authors = ["Angelo Mosquera <anggelomos@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tickthon = "^0.1.6"
ruff = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.343"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
