[tool.poetry]
name = "daily-logger"
version = "0.0.1"
description = "Script to use Ticktick tasks as daily logs"
authors = ["Angelo Mosquera <anggelomos@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tickthon = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pyright = "^1.1.344"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
